[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rasterexplorer"
version = "0.0.1"
readme = "README.md"
description = "A package for quickly viewing raster datasets on an interactive map."
keywords = ["GIS", "rasterio"]
requires-python = ">=3.8"
dependencies = [
    "folium",
    "matplotlib",
    "rasterio",
]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["rasterexplorer*"]  # package names should match these glob patterns (["*"] by default)
#exclude = []  # exclude packages matching these glob patterns (empty by default)

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88